--- a/index.html
+++ b/index.html
@@ -129,20 +129,20 @@
           <source srcset="./images/profile.jpg" type="image/jpeg">
           <img src="./images/profile.jpg" alt="profile picture Lennert Van Sever" id="profile">
         </picture>
-        <p>Hi! My name is Lennert Van Sever and currently I’m based in Brussels, Belgium. My passion is in creating challenging web applications. I like to be involved into the full process from user experience and interface design to front and backend development. I don’t like to be bound to a certain technology, it really depends on the use case which technologies should be used so finding the right one and learning to apply them is just part of the fun.</p>
-        <p>This portfolio website is completementary to my <a href="https://www.linkedin.com/in/lennert-van-sever-72783284/">LinkedIn</a> where you can check my experience and education</p>
+        <p>Hi! My name is Lennert Van Sever and currently, I’m based in Brussels, Belgium. My passion is in creating challenging web applications. I like to be involved in the full process from user experience and interface design to front and backend development. I don’t like to be bound to a certain technology, it really depends on the use case which technologies should be used so finding the right one and learning to apply them is just part of the fun.</p>
+        <p>This portfolio website is complementary to my <a href="https://www.linkedin.com/in/lennert-van-sever-72783284/">LinkedIn</a> where you can check my experience and education</p>
       </section>
       <section id="projects">
         <h2>Projects I worked on</h2>
-        <p>So far I have only worked on a project basis. Most projects took around 6 months up to a year to be developed, although a project is never really finished. Everytime I worked together with a small team of 2 up to 6 great people, keep that in mind since I don’t want to take all the credit.</p>
+        <p>So far I have only worked on a project basis. Most projects took around 6 months up to a year to be developed, although a project is never really finished. Every time I worked together with a small team of 2 up to 6 great people, keep that in mind since I don’t want to take all the credit.</p>
         <section>
           <h3>Approvals - Borealis Digital Studio</h3>
           <video width="100%" controls>
             <source src="./videos/approvals.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
           </video>
-          <p>Approvals makes it easier to approve or reject items as a manager within <a href="https://www.borealisgroup.com/">Borealis</a>. The purpose is that it becomes so easy that managers would do it themself and not delegate it to their assistences.</p>
-          <p>For this project I worked as a frontend developer to assure that the user interface, experience and integration was coming together. All the components were custom build. It was a lot of fun to get the micro transitions just right. One of the challenges was integrating with SAP and having a better mobile experience through adding Progressive Web App (PWA) capabilities. One of my goals was to get a perfect lighthouse score through continous automated testing. We did the implementation with ReactJS and Redux, it was the first time I used React Hooks on a large scale. Approvals is my latest project and it’s still under development.</p>
+          <p>Approvals makes it easier to approve or reject items as a manager within <a href="https://www.borealisgroup.com/">Borealis</a>. The purpose is that it becomes so easy that managers would do it themself and not delegate it to their assistance.</p>
+          <p>For this project, I worked as a frontend developer to assure that the user interface, experience and integration was coming together. All the components were custom build. It was a lot of fun to get the micro transitions just right. One of the challenges was integrating with SAP and have a better mobile experience through adding Progressive Web App (PWA) capabilities. One of my goals was to get a perfect lighthouse score through continuous automated testing. We did the implementation with ReactJS and Redux, it was the first time I used the React Hooks on a large scale. Approvals is my latest project and it’s still under development.</p>
         </section>
         <section>
           <h3>NutriGuide - Borealis Digital Studio</h3>
@@ -151,10 +151,10 @@
             Your browser does not support HTML5 video.
           </video>
           <p>
-            NutriGuide calculates for farmers/resellers which fertilizers they should use for their plot in order to get the optimal yield within the legal framework. It’s available in Austria and France, you can even <a href="https://nutriguide.borealis-lat.com">try it yourself</a>.
+            NutriGuide calculates for farmers/resellers which fertilizers they should use for their plot to get the optimal yield within the legal framework. It’s available in Austria and France, you can even <a href="https://nutriguide.borealis-lat.com">try it yourself</a>.
           </p>
           <p>
-            Just before NutriGuide was released I was assigned to the project to be soly responsible of the frontend. The most challenging part was the customization needs for each role and country without ending up with an endless amount of if statements. The solution was to put all the specific logic in configuration files. Another challenge was to make the form as easy to use as possible since a lot of parameters have to be filled in to make an accurate calculations. Under the hood the interface was build with the React Material UI component library. State management was handled with Redux.
+            Just before NutriGuide was released I was assigned to the project to be solely responsible for the frontend. The most challenging part was the customization needs for each role and country without ending up with an endless amount of if statements. The solution was to put all the specific logic in configuration files. Another challenge was to make the form as easy to use as possible since a lot of parameters have to be filled in to make an accurate calculation. Under the hood, the interface was built with the React Material UI component library. State management was handled with Redux.
           </p>
         </section>
         <section>
@@ -163,8 +163,8 @@
             <source src="./videos/artist-connections.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
           </video>
-          <p>While browsing on Spotify I wondered whether all the artists in the world are “related” to each other. In order to proof it, I used the Spotify API to find the 20 related artists of my favourite artist Whitney. I iterated this process until all the found artists were covered. Eventually I ended up with 1,212,134 artist and 21,261,611 connections. I saved this data as nodes and relationships in a Neo4j graph database.</p>
-          <p>Afterwards I created a <a href="http://artistconnections.tk/">simple website</a> where you can lookup the relation between any two given artists. It’s quite amazing how even the most distinct artists are still related to each other. If you want more detailed information, feel free to read my <a href="https://medium.com/@lennertvansever/the-shortest-path-between-any-two-given-artists-with-neo4j-694ada16177b">Medium blog post</a>.</p>
+          <p>While browsing on Spotify I wondered whether all the artists in the world are “related” to each other. To proof it, I used the Spotify API to find the 20 related artists of my favourite artist Whitney. I iterated this process until all the found artists were covered. Eventually I ended up with 1,212,134 artist and 21,261,611 connections. I saved this data as nodes and relationships in a Neo4j graph database.</p>
+          <p>Afterwards, I created a <a href="http://artistconnections.tk/">simple website</a> where you can look up the relation between any two given artists. It’s quite amazing how even the most distinct artists are still related to each other. If you want more detailed information, feel free to read my <a href="https://medium.com/@lennertvansever/the-shortest-path-between-any-two-given-artists-with-neo4j-694ada16177b">Medium blog post</a>.</p>
         </section>
         <section>
           <h3>Erasmus+ Digital Tools - European University Foundation</h3>
@@ -173,27 +173,27 @@
             <source srcset="./images/erasmus.png" type="image/png">
             <img width="100%" src="./images/erasmus.png" alt="Erasmus+ promotion used in the Erasmus+ app">
           </picture>
-          <p>As an Erasmus student I was annoyed how inefficient the administration of the Erasmus+ program was. I decided to do something about it with my bachelor thesis: Digitizing the Erasmus+ programme. I contacted the European Commission with my initial idea and they send it through to the <a href="https://uni-foundation.eu">European University Foundation</a> who then mentored my bachelor thesis.</p>
-          <p>Eventually they decided to hire me so that I could work further on my project. After 2 months we had a proposal to create the <a href="https://erasmusapp.eu"> Erasmus+ app</a>. The European Commission agreed to fund it and after 8 months it was developed and <a href="https://ec.europa.eu/commission/presscorner/detail/en/IP_17_1574">released to the world</a>. With 40 000 downloads I was happy with the results but it was only usefull for students and not universities so afterwards I build the <a href="https://www.erasmus-dashboard.eu">Erasmus+ dashboard</a> to help them with their mobility administration.</p>
-          <p>For both applications I was the only developer so I was responsible for the design, frontend, back end and data management. For the development I used ReactJS, MeteorJS, Cordova, NodeJS, GraphQL, MongoDB and MySQL.</p>
+          <p>As an Erasmus student, I was annoyed by how inefficient the administration of the Erasmus+ program was. I decided to do something about it with my bachelor thesis: Digitizing the Erasmus+ programme. I contacted the European Commission with my initial idea and they send it through to the <a href="https://uni-foundation.eu">European University Foundation</a> who then mentored my bachelor thesis.</p>
+          <p>Eventually, they decided to hire me so that I could work further on my project. After 2 months we had a proposal to create the <a href="https://erasmusapp.eu"> Erasmus+ app</a>. The European Commission agreed to fund it and after 8 months it was developed and <a href="https://ec.europa.eu/commission/presscorner/detail/en/IP_17_1574">released to the world</a>. With 40 000 downloads, I was happy with the results but it was only useful for students and not universities so afterwards I build the <a href="https://www.erasmus-dashboard.eu">Erasmus+ dashboard</a> to help them with their mobility administration.</p>
+          <p>For both applications, I was the only developer so I was responsible for the design, frontend, back end and data management. For the development, I used ReactJS, MeteorJS, Cordova, NodeJS, GraphQL, MongoDB and MySQL.</p>
         </section>
       </section>
       <section id="technologies">
         <h2>Technologies I used</h2>
-        <p>I enjoy combining my frontend, backend and UI/UX design skills to create usefull web applications. However, most of my time is spend on frontend technologies but I think it’s still essential to learn from the other fields</p>
+        <p>I enjoy combining my frontend, backend and UI/UX design skills to create useful web applications. However, most of my time is spend on frontend technologies but I think it’s still essential to learn from the other fields</p>
         <section>
           <h3>Frontend development</h3>
           <p>I started creating my first web applications in 2013 with only <b>HTML</b> and <b>CSS</b>. Back then responsive web design was all the rage so even my first creations had responsive layouts.</p>
-          <p>Today I primarily use <b>ReactJS</b> with Styled Components and hooks. For state management I tend to switch between Redux and Apollo local state management. In the future I would like to learn TypeScript and maybe Flutter. I highly value performance, accessibility, and best practices so I often use Google Lighthouse to score my websites.</p>
+          <p>Today I primarily use <b>ReactJS</b> with Styled Components and hooks. For state management, I tend to switch between Redux and Apollo local state management. In the future, I would like to learn TypeScript and maybe Flutter. I highly value performance, accessibility, and best practices so I often use Google Lighthouse to score my websites.</p>
         </section>
         <section>
           <h3>Backend development</h3>
-          <p>During my studies I mostly worked with PHP, Java and MySQL. Now I like to develop with <b>NodeJS</b> since then it requires less context switching when moving between the frontend and backend. On the database side I use either MongoDB or PostgreSQL depending on the context. I love to work with GraphQL since I think it’s the future of API design.</p>
+          <p>During my studies, I mostly worked with PHP, Java and MySQL. Now I like to develop with <b>NodeJS</b> since then it requires less context switching when moving between the frontend and backend. On the database side, I use either MongoDB or PostgreSQL depending on the context. I love to work with GraphQL since I think it’s the future of API design.</p>
         </section>
         <section>
           <h3>UX/UI design</h3>
-          <p>Understanding the user needs is critical for any proper project. For this reason I highly value user interviews and feedback. Whenever I’m building a web application, I always keep in mind how the user would perceive it.</p>
-          <p>For user interface design I often use Sketch and Abstract for version control. However I only use it to get a rough idea since you are way closer to the real interaction when <b>designing in the browser</b>.</p>
+          <p>Understanding user needs is critical for any proper project. For this reason, I highly value user interviews and feedback. Whenever I’m building a web application, I always keep in mind how the user would perceive it.</p>
+          <p>For user interface design I often use Sketch and Abstract for version control. However, I only use it to get a rough idea since you are way closer to the real interaction when <b>designing in the browser</b>.</p>
         </section>
       </section>
       
@@ -201,9 +201,9 @@
         <h2>Books I read</h2>
         <p>Development and design is my real passion so I’m more than happy to sacrifice some free time to learn more about it. I only mention the 5 most inspiring books since I tend to read a new book every three weeks.</p>
         <ul>
-          <li>Better web typography, Matej Latin; Web design is 90% typography so we must give it appropiate attention. I learned how to make the ‘perfect’ paragraph and how to get vertical and horizontal rhytm right through macro/micro typography.</li>
-          <li>You Don’t know JS series, Kyle Simpson; Truely understanding how JavaScript works can be  the difference between a good and a great developer. Thanks to Kyle I’m more confident when writing JavaScript code.</li>
-          <li>Form Design Patterns, Adam Silver; Forms are hard for both developers and users. With the mentioned design patterns I was able to create much simpler forms then before.</li>
+          <li>Better web typography, Matej Latin; Web design is 90% typography so we must give it appropriate attention. I learned how to make the ‘perfect’ paragraph and how to get the vertical and horizontal rhythm right through macro/micro typography.</li>
+          <li>You Don’t Know JS series, Kyle Simpson; Truly understanding how JavaScript works can be the difference between a good and a great developer. Thanks to Kyle I’m more confident when writing JavaScript code.</li>
+          <li>Form Design Patterns, Adam Silver; Forms are hard for both developers and users. With the mentioned design patterns I was able to create much simpler forms than before.</li>
           <li>Clean Code, Robert C. Martin; Because of this book it’s my daily work goal to make my code as explicit as possible.</li>
           <li>Atomic Design, Brad Frost; After reading this book I started structuring my UI components with Atomic Design in mind which makes a lot of sense in my personal opinion.</li>
         </ul>
@@ -212,15 +212,15 @@
         <h2>Conferences I went to</h2>
         <p>I’m always looking for the next interesting conference. It has every time been a great learning experience and a good way to meet people within the industry.</p>
         <ul>
-          <li>DotJS, Paris; An impressive one track conference, especially the talks from TC39 were insightfull.</li>
-          <li>Full Stack Europe, Antwerp; Getting some new ideas and concepts from accross the stack.</li>
-          <li>Perf matters, San Francisco; At this conference they explained how to build performant frontends which is a critical part of the user experience.</li>
-          <li>Design systems, London; Some good examples how a proper design system should be build and how to start one in your own company.</li>
+          <li>DotJS, Paris; An impressive one-track conference, especially the talks from TC39 were insightful.</li>
+          <li>Full Stack Europe, Antwerp; Getting some new ideas and concepts from across the stack.</li>
+          <li>Perf matters, San Francisco; At this conference, they explained how to build performant frontends which is a critical part of the user experience.</li>
+          <li>Design systems, London; Some good examples of how a proper design system should be built and how to start one in your own company.</li>
         </ul>
       </section>
       <section id="contact">
         <h2>Contact me</h2>
-        <p>When you contact me please give me a good reason why I would be a good match. Don’t just give me a job description with a matching tech stack, I’m a human not a computer.</p>
+        <p>When you contact me please give me a good reason why I would be a good match. Don’t just give me a job description with a matching tech stack, I’m a human, not a computer.</p>
         <p>You can reach me by email <a href="mailto:lennert_vansever@hotmail.be">lennert_vansever@hotmail.be</a>, telephone <a href="tel:+32 489 47 1063">+32 489 47 1063</a> or <a href="https://www.linkedin.com/in/lennert-van-sever-72783284/">LinkedIn</a>.</p>
       </section>
     </article>
