--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
             <source src="./videos/approvals.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
           </video>
-          <p>Approvals makes it easier to approve or reject items as a manager within <a href="https://www.borealisgroup.com/">Borealis</a>. The purpose is that it becomes so easy that managers would do it themself and not delegate it to their assistance.</p>
-          <p>For this project, I worked as a frontend developer to assure that the user interface, experience and integration was coming together. All the components were custom build. It was a lot of fun to get the micro transitions just right. One of the challenges was integrating with SAP and have a better mobile experience through adding Progressive Web App (PWA) capabilities. One of my goals was to get a perfect lighthouse score through continuous automated testing. We did the implementation with ReactJS and Redux, it was the first time I used the React Hooks on a large scale. Approvals is my latest project and it’s still under development.</p>
+          <p>Approvals makes it easier to approve or reject items as a manager within <a href="https://www.borealisgroup.com/">Borealis</a>. The purpose is that it becomes so easy that managers would do it themself and not delegate it to their assistants.</p>
+          <p>For this project, I worked as a frontend developer to assure that the user interface, experience and integration was coming together. All the components were custom build. It was a lot of fun to get the micro transitions just right.</p>
+          <p>One of the challenges was integrating with SAP and getting a perfect lighthouse score through continuous automated testing. We did the implementation with ReactJS and Redux, it was the first time I used the React Hooks on a large scale. Approvals is my latest project and it’s still under development.</p>
         </section>
         <section>
           <h3>NutriGuide - Borealis Digital Studio</h3>
@@ -150,12 +151,9 @@
             <source src="./videos/nutriguide.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
           </video>
-          <p>
-            NutriGuide calculates for farmers/resellers which fertilizers they should use for their plot to get the optimal yield within the legal framework. It’s available in Austria and France, you can even <a href="https://nutriguide.borealis-lat.com">try it yourself</a>.
-          </p>
-          <p>
-            Just before NutriGuide was released I was assigned to the project to be solely responsible for the frontend. The most challenging part was the customization needs for each role and country without ending up with an endless amount of if statements. The solution was to put all the specific logic in configuration files. Another challenge was to make the form as easy to use as possible since a lot of parameters have to be filled in to make an accurate calculation. Under the hood, the interface was built with the React Material UI component library. State management was handled with Redux.
-          </p>
+          <p>NutriGuide calculates for farmers/resellers which fertilizers they should use for their plot to get the optimal yield within the legal framework. It’s available in Austria and France, you can even <a href="https://nutriguide.borealis-lat.com">try it yourself</a>.</p>
+          <p>Just before NutriGuide was released I was assigned to the project to be solely responsible for the frontend. The most challenging part was the customization needs for each role and country without ending up with an endless amount of if statements. The solution was to put all the specific logic in configuration files.</p>
+          <p>Another challenge was to make the form as easy to use as possible since a lot of parameters have to be filled in to make an accurate calculation. Under the hood, the interface was built with the React Material UI component library. State management was handled with Redux.</p>
         </section>
         <section>
           <h3>Artist connections - Personal</h3>
@@ -163,7 +161,7 @@
             <source src="./videos/artist-connections.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
           </video>
-          <p>While browsing on Spotify I wondered whether all the artists in the world are “related” to each other. To proof it, I used the Spotify API to find the 20 related artists of my favourite artist Whitney. I iterated this process until all the found artists were covered. Eventually I ended up with 1,212,134 artist and 21,261,611 connections. I saved this data as nodes and relationships in a Neo4j graph database.</p>
+          <p>While browsing on Spotify I wondered whether all the artists in the world are “related” to each other. To proof it, I used the Spotify API to find the 20 related artists of my favourite artist Whitney. I iterated this process until all the found artists were covered. Eventually I ended up with 1,212,134 artist and 21,261,611 connections. I used this data as nodes and relationships in a Neo4j graph database.</p>
           <p>Afterwards, I created a <a href="http://artistconnections.tk/">simple website</a> where you can look up the relation between any two given artists. It’s quite amazing how even the most distinct artists are still related to each other. If you want more detailed information, feel free to read my <a href="https://medium.com/@lennertvansever/the-shortest-path-between-any-two-given-artists-with-neo4j-694ada16177b">Medium blog post</a>.</p>
         </section>
         <section>
@@ -188,7 +186,8 @@
         </section>
         <section>
           <h3>Backend development</h3>
-          <p>During my studies, I mostly worked with PHP, Java and MySQL. Now I like to develop with <b>NodeJS</b> since then it requires less context switching when moving between the frontend and backend. On the database side, I use either MongoDB or PostgreSQL depending on the context. I love to work with GraphQL since I think it’s the future of API design.</p>
+          <p>During my studies, I mostly worked with PHP, Java and MySQL. Now I like to develop with <b>NodeJS</b> since then it requires less context switching when moving between the frontend and backend. 
+          <p>On the database side, I use either MongoDB or PostgreSQL depending on the context. I love to work with GraphQL since I think it’s the future of API design.</p>
         </section>
         <section>
           <h3>UX/UI design</h3>
