add vintage map entry

--- a/index.html
+++ b/index.html
@@ -142,8 +142,16 @@
             Your browser does not support HTML5 video.
           </video>
           <p>Approvals makes it easier to approve or reject items as a manager within <a href="https://www.borealisgroup.com/">Borealis</a>. The purpose is that it becomes so easy that managers would do it themself and not delegate it to their assistants.</p>
-          <p>For this project, I worked as a frontend developer to assure that the user interface, experience and integration was coming together. All the components were custom build. It was a lot of fun to get the micro transitions just right.</p>
-          <p>One of the challenges was integrating with SAP and getting a perfect lighthouse score through continuous automated testing. We did the implementation with ReactJS and Redux, it was the first time I used the React Hooks on a large scale. Approvals is my latest project and it’s still under development.</p>
+          <p>For this project, I worked as a frontend developer to assure that the user interface, experience and integration was coming together. All the components were custom build in ReactJS and state management handled by Redux.</p>
+        </section>
+        <section>
+          <h3>Vintage map - Personal</h3>
+          <video width="100%" controls>
+            <source src="./videos/vintage-maps.mp4" type="video/mp4">
+            Your browser does not support HTML5 video.
+          </video>
+          <p>To keep myself busy during the covid winter lockdown, I made a web application to create your own vintage maps. You can easily export it to a PDF or order a print. Try it here: <a href="https://vintagemap.app">https://vintagemap.app</a></p>
+          <p>The map is built with D3.js for maximum flexibility, the rest of the interface is made with vanilla web components. In April 2021 it went live by featuring on <a href="https://www.producthunt.com/posts/vintagemap">Producthunt</a>.</p>
         </section>
         <section>
           <h3>NutriGuide - Borealis Digital Studio</h3>
